--- a/app/views/form.html
+++ b/app/views/form.html
@@ -1,24 +1,23 @@
 <form #f="ngForm" novalidate (ngSubmit)=save()>
 	<div class="form-group">
 		<template ngFor let-fld [ngForOf]="fields">
-			<div class="grid-20 mobile-grid-100 grid-parent">
-				{{fld.title}}
+			<div>
+				<div class="grid-20 mobile-grid-100 grid-parent">
+					{{fld.title}}
+				</div>
+				<div class="grid-80 mobile-grid-100 grid-parent">
+					<textarea #input *ngIf="fld.textarea" class="form-control" name="{{fld.name}}" placeholder="{{fld.placeholder || fld.title}}" [(ngModel)]="data[fld.name]" (blur)="validate(f, fld)" [class.req]=fld.req></textarea>
+					<input #input *ngIf="fld.input" class="form-control " type="{{fld.input}}" name="{{fld.name}}" placeholder="{{fld.placeholder || fld.title}}" [(ngModel)]="data[fld.name]" (blur)="validate(f, fld)" [class.req]=fld.req>
+					<template ngFor let-err [ngForOf]="errors(f, fld)">
+						<span style="display: block"><span style="color: red">*</span> {{err}}</span>
+					</template>
+				</div>
 			</div>
-			<div class="grid-80 mobile-grid-100 grid-parent">
-				<textarea class="form-control" *ngIf="fld.textarea" placeholder="{{fld.placeholder || fld.title}}" name="{{fld.name}}" #input
-					[(ngModel)]="data[fld.name]" [required]=fld.req></textarea>
-				<input class="form-control" *ngIf="fld.input" type="{{fld.type || 'text'}}" name="{{fld.name}}" placeholder="{{fld.placeholder || fld.title}}"
-					#input [(ngModel)]="data[fld.name]" (blur)="validate(f.form, fld)">
-				<span *ngIf="fld.pattern && isValid(f.form, fld.name)">
-					<template ngFor let-err [ngForOf]="errors(f.form, fld)"><br>* {{err}}</template>
-				</span>
-				<br><br>
-			</div>
+			<div class="clearfix br"></div>
 		</template>
-		<div class="clearfix"></div>
-		<br><br>
+		<div class="clearfix br"></div>
 		<div class="grid-50 mobile-grid-40 grid-parent">
-			<a href="#fakelink" class="btn btn-block btn-sm btn-blue ghost" (click)="history.goback()">Back</a>
+			<a href="#fakelink" class="btn btn-block btn-sm btn-blue ghost" (click)="onCancel ? onCancel() : history.back()">Back</a>
 		</div>
 		<div class="grid-50 mobile-grid-60 grid-parent align-right">
 			<button class="btn btn-block btn-sm btn-green1" [disabled]="!f.valid || loading">Save &#187;</button>
