--- a/static/css/style.css
+++ b/static/css/style.css
@@ -1413,7 +1413,7 @@ padding-bottom:100px;
 	font-size:10.83px;
 }
 .center-widget input[type="text"], .center-widget input[type="email"], .center-widget input[type="password"],
-.center-widget textarea{
+.center-widget textarea, .center-widget input[type="number"]{
 	box-sizing:border-box;
 	width:100%;
 }
@@ -1885,4 +1885,37 @@ input[type="submit"]:disabled, input[type="submit"]:disabled:hover {
 
 .clearfix.br:after {
 	height: 19px;
+}
+
+dialog {
+	margin: auto auto;
+	padding: 0;
+	border: 0;
+	display: hidden;
+	position: absolute;
+	top: 0;
+	bottom: 0;
+	left: 0;
+	right: 0;
+	background-color: rgba(0, 0, 0, 0.2);
+	width: 100%;
+	height: 100%;
+	z-index: 1000;
+	overflow: auto;
+}
+
+dialog.visible {
+	display: block;
+}
+
+dialog > div {
+	margin: 10px auto;
+	background: white;
+	padding: 10px 20px;
+	width: 600px;
+	border-radius: 10px;
+}
+
+dialog > div > h2 {
+	padding-top: 10px !important;
 }
