--- a/static/css/style.css
+++ b/static/css/style.css
@@ -1892,7 +1892,7 @@ dialog {
 	padding: 0;
 	border: 0;
 	display: hidden;
-	position: absolute;
+	position: fixed;
 	top: 0;
 	bottom: 0;
 	left: 0;
