--- a/app/views/mTalents.html
+++ b/app/views/mTalents.html
@@ -1,6 +1,5 @@
 <h2 class="heading">Manage My Talents</h2>
-
-<a class="btn btn-green1 btn-micro">Invite new talent +</a>
+<button class="btn btn-green1 btn-micro" (click)=toggleDialog()>Create +</button>
 
 <form style="width:250px; float:right;">
 	<input class="form-control input-sm" type="text" placeholder="Search this table..." [(ngModel)]="kw" name="kw">
@@ -36,3 +35,10 @@
 		</tr>
 	</tbody>
 </table>
+
+<dialog>
+	<div>
+		<h2 class="heading">Create Talent</h2>
+		<form-ng [fields]=fields [onSave]=save [onCancel]=toggleDialog [data]=data></form-ng>
+	</div>
+</dialog>
