big change to forms, gonna allow editing to be easier

--- a/app/views/form.html
+++ b/app/views/form.html
@@ -1,26 +1,31 @@
-<form #f="ngForm" novalidate>
-	<div class="form-group">
-		<template ngFor let-fld [ngForOf]="fields">
-			<div>
-				<div class="grid-20 mobile-grid-100 grid-parent">
-					{{fld.title}}
+<div *ngIf=showDialog>
+	<h2 class="heading" *ngIf=title>{{title}}</h2>
+	<form #f="ngForm" novalidate onsubmit="return false;">
+		<div class="form-group">
+			<template ngFor let-fld [ngForOf]="fields">
+				<div>
+					<div class="grid-20 mobile-grid-100 grid-parent">
+						{{fld.title}}
+					</div>
+					<div class="grid-80 mobile-grid-100 grid-parent">
+						<textarea #input *ngIf="fld.textarea" class="form-control" name="{{fld.name}}" placeholder="{{fld.placeholder || fld.title}}"
+							[(ngModel)]="bind(fld).value" (blur)="validate(f, fld)" [class.req]=fld.req></textarea>
+						<input #input *ngIf="fld.input" class="form-control " type="{{fld.input}}" name="{{fld.name}}" placeholder="{{fld.placeholder || fld.title}}"
+							[(ngModel)]="bind(fld).value" (blur)="validate(f, fld)" [class.req]=fld.req [attr.required]=fld.req [step]="fld.input==='number' && 0.01">
+						<template ngFor let-err [ngForOf]="errors(f, fld)">
+							<span style="display: block"><span style="color: red">*</span> {{err}}</span>
+						</template>
+					</div>
 				</div>
-				<div class="grid-80 mobile-grid-100 grid-parent">
-					<textarea #input *ngIf="fld.textarea" class="form-control" name="{{fld.name}}" placeholder="{{fld.placeholder || fld.title}}" [(ngModel)]="bind(fld).value" (blur)="validate(f, fld)" [class.req]=fld.req></textarea>
-					<input #input *ngIf="fld.input" class="form-control " type="{{fld.input}}" name="{{fld.name}}" placeholder="{{fld.placeholder || fld.title}}" [(ngModel)]="bind(fld).value" (blur)="validate(f, fld)" [class.req]=fld.req [attr.required]=fld.req [step]="fld.input==='number' && 0.01">
-					<template ngFor let-err [ngForOf]="errors(f, fld)">
-						<span style="display: block"><span style="color: red">*</span> {{err}}</span>
-					</template>
-				</div>
-			</div>
+				<div class="clearfix br"></div>
+			</template>
 			<div class="clearfix br"></div>
-		</template>
-		<div class="clearfix br"></div>
-		<div class="grid-50 mobile-grid-40 grid-parent">
-			<button class="btn btn-block btn-sm btn-blue ghost" (click)="onCancel()">{{ buttons.cancel }}</button>
+			<div class="grid-50 mobile-grid-40 grid-parent">
+				<button class="btn btn-block btn-sm btn-blue ghost" (click)="hide()">{{ buttons.cancel }}</button>
+			</div>
+			<div class="grid-50 mobile-grid-60 grid-parent align-right">
+				<button class="btn btn-block btn-sm btn-green1" [disabled]="valid" (click)="save()">{{ buttons.save }} </button>
+			</div>
 		</div>
-		<div class="grid-50 mobile-grid-60 grid-parent align-right">
-			<button class="btn btn-block btn-sm btn-green1" [disabled]="valid" (click)="save()">{{ buttons.save }} </button>
-		</div>
-	</div>
-</form>
+	</form>
+</div>
