--- a/app/views/mTalentAgencies.html
+++ b/app/views/mTalentAgencies.html
@@ -1,5 +1,5 @@
 <h2 class="heading">Manage Talent Agencies</h2>
-<button class="btn btn-green1 btn-micro" (click)=toggleDialog()>Create +</button>
+<button class="btn btn-green1 btn-micro" (click)=dlg.show()>Create +</button>
 
 <form style="width:250px; float:right;">
 	<input class="form-control input-sm" type="text" placeholder="Search this table..." [(ngModel)]="kw" name="kw">
@@ -31,9 +31,4 @@
 	</tbody>
 </table>
 
-<dialog>
-	<div>
-		<h2 class="heading">Create Talent Agency</h2>
-		<form-ng [fields]=fields [onSave]=save [onCancel]=toggleDialog [data]=data></form-ng>
-	</div>
-</dialog>
+<form-dlg #dlg [fields]=fields [data]=data (onSave)="save($event.data, $event.done)" title="Create Talent Agency"></form-dlg>
