--- a/app/views/mAgencies.html
+++ b/app/views/mAgencies.html
@@ -32,4 +32,4 @@
 </table>
 
 
-<form-dlg #dlg [fields]=fields [data]=data (onSave)="save($event.data, $event.done)" title="Create Media Agency"></form-dlg>
+<form-dlg #dlg [fields]=fields (onSave)="save($event.data, $event.done)" title="Create Media Agency"></form-dlg>
