--- a/app/views/mTalentAgencies.html
+++ b/app/views/mTalentAgencies.html
@@ -31,4 +31,4 @@
 	</tbody>
 </table>
 
-<form-dlg #dlg [fields]=fields [data]=data (onSave)="save($event.data, $event.done)" title="Create Talent Agency"></form-dlg>
+<form-dlg #dlg [fields]=fields (onSave)="save($event.data, $event.done)" title="Create Talent Agency"></form-dlg>
