--- a/app/views/mTalents.html
+++ b/app/views/mTalents.html
@@ -37,4 +37,4 @@
 </table>
 
 
-<form-dlg #dlg [fields]=fields [data]=data (onSave)="save($event.data, $event.done)"  title="Create Talent"></form-dlg>
+<form-dlg #dlg [fields]=fields (onSave)="save($event.data, $event.done)"  title="Create Talent"></form-dlg>
