--- a/static/css/style.css
+++ b/static/css/style.css
@@ -851,7 +851,7 @@ textarea{
 	border-width: 1px;
 }
 
-.notification.error .fui-cross{
+.notification.error .fui-cross, span.error{
 	color: #d2335c;
 }
 
