--- a/app/views/mAdvertisers.html
+++ b/app/views/mAdvertisers.html
@@ -1,5 +1,5 @@
 <h2 class="heading">Manage Advertisers</h2>
-<button class="btn btn-green1 btn-micro" (click)=dlg.show(data)>Create +</button>
+<button class="btn btn-green1 btn-micro" (click)=cdlg.show(data)>Create +</button>
 
 <form style="width:250px; float:right;">
 	<input class="form-control input-sm" type="text" placeholder="Search this table..." [(ngModel)]="kw" name="kw">
@@ -25,9 +25,10 @@
 			<td>{{adv.numCmps}}</td>
 			<td>{{adv.email}}</td>
 			<td>{{adv.createdAt * 1000 | date}}</td>
-			<td><button class="btn-info btn-micro ghost" (click)=Edit(ag.id)>Edit</button> | <button class="btn-scarlet btn-micro ghost">X</button></td>
+			<td><button class="btn-info btn-micro ghost" (click)=edlg.show(adv)>Edit</button> | <button class="btn-scarlet btn-micro ghost">X</button></td>
 		</tr>
 	</tbody>
 </table>
 
-<form-dlg #dlg [fields]=fields (onSave)="save($event.data, $event.done)" title="Create Advertiser"></form-dlg>
+<form-dlg #cdlg [fields]=fields (onSave)="save($event.data, $event.done)" title="Create Advertiser"></form-dlg>
+<form-dlg #edlg [fields]=editFields (onSave)="edit($event.data, $event.done)" title="Edit Advertiser"></form-dlg>
