--- a/app/views/mAgencies.html
+++ b/app/views/mAgencies.html
@@ -1,5 +1,5 @@
 <h2 class="heading">Manage Media Agencies</h2>
-<button class="btn btn-green1 btn-micro" (click)=dlg.show()>Create +</button>
+<button class="btn btn-green1 btn-micro" (click)=cdlg.show(data)>Create +</button>
 
 <form style="width:250px; float:right;">
 	<input class="form-control input-sm" type="text" placeholder="Search this table..." [(ngModel)]="kw" name="kw">
@@ -25,11 +25,12 @@
 			<td>{{ag.subCount}}</td>
 			<td>{{ag.email}}</td>
 			<td>{{ag.createdAt * 1000 | date}}</td>
-			<td><button class="btn-info btn-micro ghost" (click)=Edit(ag.id)>Edit</button> | <button class="btn-scarlet btn-micro ghost"
+			<td><button class="btn-info btn-micro ghost" (click)=edlg.show(ag)>Edit</button> | <button class="btn-scarlet btn-micro ghost"
 					[disabled]="ag.id < 4" (click)=Delete(ag.id)>X</button></td>
 		</tr>
 	</tbody>
 </table>
 
 
-<form-dlg #dlg [fields]=fields (onSave)="save($event.data, $event.done)" title="Create Media Agency"></form-dlg>
+<form-dlg #cdlg [fields]=fields (onSave)="save($event.data, $event.done)" title="Create Media Agency"></form-dlg>
+<form-dlg #edlg [fields]=editFields (onSave)="edit($event.data, $event.done)" title="Edit Media Agency"></form-dlg>
