--- a/app/views/mCampaigns.html
+++ b/app/views/mCampaigns.html
@@ -1,5 +1,5 @@
 <h2 class="heading">Manage Campaigns</h2>
-<button class="btn btn-green1 btn-micro" (click)=dlg.show()>Create +</button>
+<button class="btn btn-green1 btn-micro" (click)=cdlg.show(data)>Create +</button>
 
 <form style="width:250px; float:right;">
 	<input class="form-control input-sm" type="text" placeholder="Search this table..." [(ngModel)]="kw" name="kw">
@@ -31,10 +31,11 @@
 			<td>{{cmp.instagram && 'X'}}</td>
 			<td>{{cmp.youtube && 'X'}}</td>
 			<td>{{cmp.createdAt * 1000 | date}}</td>
-			<td><button class="btn-info btn-micro ghost" (click)=Edit(ag.id)>Edit</button> | <button class="btn-scarlet btn-micro ghost">X</button></td>
+			<td><button class="btn-info btn-micro ghost" (click)=edlg.show(cmp)>Edit</button> | <button class="btn-scarlet btn-micro ghost">X</button></td>
 		</tr>
 	</tbody>
 </table>
 
 
-<form-dlg #dlg [fields]=fields (onSave)="save($event.data, $event.done)" title="Create Campaign"></form-dlg>
+<form-dlg #cdlg [fields]=fields (onSave)="save($event.data, $event.done)" title="Create Campaign"></form-dlg>
+<form-dlg #edlg [fields]=editFields (onSave)="edit($event.data, $event.done)" title="Edit Campaign"></form-dlg>
