content feed support

--- a/app/views/leftNav.html
+++ b/app/views/leftNav.html
@@ -38,7 +38,7 @@
 				<li class="li-campaign"><a [routerLink]="['/mCampaigns', user.id]" [routerLinkActive]="['is-active']">My Campaigns</a></li>
 				<li class="li-reporting"><a [routerLink]="['/reporting', user.id]" [routerLinkActive]="['is-active']">Reporting</a></li>
 				<li class="li-perks"><a [routerLink]="['/mPerks', user.id]" [routerLinkActive]="['is-active']">My Perks</a></li>
-				<li class="li-content"><a [routerLink]="['/contentFeed']">My Content</a></li>
+				<li class="li-content"><a [routerLink]="['/contentFeed', user.id]">My Content</a></li>
 			</ul>
 		</div>
 	</div>
