--- a/static/css/style.css
+++ b/static/css/style.css
@@ -1413,11 +1413,10 @@ padding-bottom:100px;
 	font-size:10.83px;
 }
 
-/*.center-widget input[type="text"], .center-widget input[type="email"], .center-widget input[type="password"],
-.center-widget textarea, .center-widget input[type="number"]{
+.center-widget input, .center-widget textarea {
 	box-sizing:border-box;
 	width:100%;
-}*/
+}
 
 .center-widget .form-group label,
 .center-widget .form-group input[type="checkbox"]{
