--- a/app/views/signup.html
+++ b/app/views/signup.html
@@ -8,11 +8,11 @@
 			<div class="clearfix"></div>
 		</div>
 		<div class="fields">
-			<div class="field-item company-name"><input placeholder="Name" class="form-control formLoggedOut" name="name" [(ngModel)]="form.name" required></div>
-			<div class="field-item email"><input placeholder="Email" class="form-control formLoggedOut" name="email" [(ngModel)]="form.email" required pattern="^[^@]+@[^@]+\.[^@]+$"></div>
-			<div class="field-item password"><input type="password" placeholder="Password" class="form-control formLoggedOut" name="pass" [(ngModel)]="form.pass" required
+			<div class="field-item company-name"><input placeholder="Name" class="form-control" name="name" [(ngModel)]="form.name" required></div>
+			<div class="field-item email"><input placeholder="Email" class="form-control" name="email" [(ngModel)]="form.email" required pattern="^[^@]+@[^@]+\.[^@]+$"></div>
+			<div class="field-item password"><input type="password" placeholder="Password" class="form-control" name="pass" [(ngModel)]="form.pass" required
 					minlength="8"></div>
-			<div class="field-item password"><input type="password" placeholder="Confirm Password" class="form-control formLoggedOut" name="pass" [(ngModel)]="form.pass2"
+			<div class="field-item password"><input type="password" placeholder="Confirm Password" class="form-control" name="pass" [(ngModel)]="form.pass2"
 					required minlength="8"></div>
 			<div *ngIf="f.valid && form.pass != form.pass2" class="notification error">The passwords need to match.</div>
 			<div class="checkbox">
