work around another form validation bug

--- a/app/views/form.html
+++ b/app/views/form.html
@@ -11,8 +11,8 @@
 						<textarea #input *ngIf="fld.textarea" class="form-control" name="{{fld.name}}" placeholder="{{fld.placeholder || fld.title}}"
 							[(ngModel)]="field(fld).value" (blur)="validate(f, fld)" [class.req]=fld.req></textarea>
 						<input #input *ngIf="fld.input" class="form-control " type="{{fld.input}}" name="{{fld.name}}" placeholder="{{fld.placeholder || fld.title}}"
-							[(ngModel)]="field(fld).value" (blur)="validate(f, fld)" [class.req]=fld.req [attr.required]=fld.req [step]="fld.input==='number' && 0.01">
-						<template ngFor let-err [ngForOf]="errors(f, fld)">
+							[value]="binders[fld.name].value" (blur)="validate(input)" [class.req]=fld.req [attr.required]=fld.req [step]="fld.input==='number' && 0.01">
+						<template ngFor let-err [ngForOf]="binders[fld.name].errors">
 							<span style="display: block"><span class="error">*</span> {{err}}</span>
 						</template>
 					</div>
