--- a/app/views/mAdvertisers.html
+++ b/app/views/mAdvertisers.html
@@ -30,5 +30,5 @@
 	</tbody>
 </table>
 
-<form-dlg #cdlg [fields]=fields (onSave)="save($event.data, $event.done)" title="Create Advertiser"></form-dlg>
-<form-dlg #edlg [fields]=editFields (onSave)="edit($event.data, $event.done)" title="Edit Advertiser"></form-dlg>
+<smart-form #cdlg class="dialog" [fields]=fields (onSave)="save($event.data, $event.done)" title="Create Advertiser"></smart-form>
+<smart-form #edlg class="dialog" [fields]=editFields (onSave)="edit($event.data, $event.done)" title="Edit Advertiser"></smart-form>
