--- a/app/views/leftNav.html
+++ b/app/views/leftNav.html
@@ -23,7 +23,7 @@
 		</ul>
 	</div>
 
-	<div *ngIf="user.talentAgency">
+	<div class="user-account-options" *ngIf="user.talentAgency">
 		<div class="user-account-options">
 			<ul>
 				<li class="li-influencers"><a [routerLink]="['/mTalents', user.id]" [routerLinkActive]="['is-active']">My Talent</a></li>
@@ -38,7 +38,7 @@
 			<ul>
 				<li class="li-campaign"><a [routerLink]="['/mCampaigns', user.id]" [routerLinkActive]="['is-active']">My Campaigns</a></li>
 				<li class="li-reporting"><a [routerLink]="['/reporting', user.id]" [routerLinkActive]="['is-active']">Reporting</a></li>
-				<li class="li-content"><a [routerLink]="['/contentFeed', user.id]">My Content</a></li>
+				<li class="li-content"><a [routerLink]="['/contentFeed', user.id]" [routerLinkActive]="['is-active']">My Content</a></li>
 			</ul>
 		</div>
 	</div>
@@ -46,8 +46,8 @@
 	<!-- Put influencer nav here at a later date-->
 
 	<div class="shrink-opt">
-		<div class="toside" (click)="api.Logout()"><i class="ico exit ttip" title="Logout"></i></div>
-		<div class="anchor"><i class="ico settings ttip" title="Edit my profile"></i></div>
+		<a class="toside" (click)="api.Logout()"><i class="ico exit ttip" title="Logout"></i></a>
+		<a class="anchor"  [routerLink]="['/editProfile', user.id]"><i class="ico settings ttip" title="Edit my profile"></i></a>
 		<div class="clearfix"></div>
 	</div>
 
