--- a/app/views/forgotPassword.html
+++ b/app/views/forgotPassword.html
@@ -9,10 +9,10 @@
 	</div>
 	<div class="fields">
 		<div *ngIf="!success" class="field-text">Please enter your email address. You will receive a link to create a new password via email.<br><br></div>
-		<div *ngIf="!success" class="field-item email"><input type="text" placeholder="Email" class="form-control formLoggedOut" name="email" [(ngModel)]="form.email" required
+		<div *ngIf="!success" class="field-item email"><input type="email" placeholder="Email" class="form-control" name="email" [(ngModel)]="form.email" required
 				pattern="^[^@]+@[^@]+\.[^@]+$"></div>
 		<div *ngIf="error" class="notification error">
-			<p>{{error}}</p>
+			<p>There was an error processing your request, please try again later.</p>
 		</div>
 		<div *ngIf="success" class="notification success">
 			<p>Please check your Email.</p>
