--- a/static/css/style.css
+++ b/static/css/style.css
@@ -1422,7 +1422,8 @@ padding-bottom:100px;
 .center-widget .form-group label,
 .center-widget .form-group input[type="checkbox"]{
 	margin:0;
-    margin-bottom: 10px;
+	margin-bottom: 10px;
+	display: inline-block;
 }
 
 .center-widget .form-group label:last-child{margin-right:0;}
