--- a/app/views/leftNav.html
+++ b/app/views/leftNav.html
@@ -18,8 +18,8 @@
 
 	<div class="user-account-options" *ngIf="user.adAgency">
 		<ul>
-			<li class="li-campaign"><a [routerLink]="['/mAdvertisers']" [routerLinkActive]="['is-active']">My Advertisers</a></li>
-			<li class="li-reporting"><a [routerLink]="['/reporting']" [routerLinkActive]="['is-active']">Reporting</a></li>
+			<li class="li-campaign"><a [routerLink]="['/mAdvertisers', user.id]" [routerLinkActive]="['is-active']">My Advertisers</a></li>
+			<li class="li-reporting"><a [routerLink]="['/reporting', user.id]" [routerLinkActive]="['is-active']">Reporting</a></li>
 		</ul>
 	</div>
 
