--- a/app/views/login.html
+++ b/app/views/login.html
@@ -10,10 +10,11 @@
 	</div>
 	<div class="fields">
 		<div class="field-item email">
-			<input placeholder="Email" class="form-control" name="username" type="email" [(ngModel)]="form.email" required pattern="^[^@]+@[^@]+\.[^@]+$"></div>
+			<input placeholder="Email" class="form-control" name="username" type="email" [(ngModel)]="form.email" required pattern="^[^@]+@[^@]+\.[^@]+$">
+		</div>
+		<div class="clearfix br"></div>
 		<div class="field-item password">
-			<input type="password" placeholder="Password" class="form-control" name="password" [(ngModel)]="form.pass"
-				required minlength="8"></div>
+			<input type="password" placeholder="Password" class="form-control" name="password" [(ngModel)]="form.pass" required minlength="8"></div>
 		<div *ngIf="error" class="notification error">
 			<p>{{error}}</p>
 		</div>
